--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel = "stylesheet" href = "Style.css"
+    <link rel = "Style.css" href = "Style.css"
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JE SUIS STUPID</title>
